--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_maps">MapsActivity</string>
     <string name="search">SEARCH</string>
     <string name="search_hint">Search a place</string>
+    <string name="nearByResponse">nearByResponse </string>
 </resources>
