--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="search_hint">Search a place</string>
     <string name="nearByResponse">nearByResponse </string>
     <string name="warning_no_opening_hours"> Warning: Open hours is not available </string>
+    <string name="filter_fragment">Filter</string>
 </resources>
