--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,7 @@
     <string name="settings">Settings</string>
     <string name="fullName_example">Mira Lu Ju Tin</string>
     <string name="email_example">miralujutin@gmail.com</string>
+    <string name="calling_text">Calling...</string>
+    <string name="police_number_text">999</string>
+    <string name="emergency_button">Emergency Button</string>
 </resources>
