--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,5 @@
     <string name="calling_text">Calling...</string>
     <string name="police_number_text">999</string>
     <string name="emergency_button">Emergency Button</string>
+    <string name="show_direction_on_map">Show direction on Map</string>
 </resources>
