--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,6 @@
     <string name="show_direction_on_map">Show direction on Map</string>
     <string name="place_name">Place Name</string>
     <string name="address">Address</string>
+    <string name="details">Details</string>
+    <string name="availability">Availability:</string>
 </resources>
